--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,20 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.HomeFragment"
-    android:layout_marginBottom="50dp"
-    >
+    android:layout_marginBottom="50dp">
+    <LinearLayout
+        android:id="@+id/searchLayout"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:weightSum="4"
+        android:orientation="horizontal">
+        <EditText
+            android:id="@+id/homeFragment_searct_Edittext"
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:layout_height="55dp"
+            android:layout_margin="20dp"/>
+        <TextView
+            android:id="@+id/searchButton"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:padding="10dp"
+            android:drawableLeft="@drawable/ic_baseline_search_24"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+
+    <androidx.cardview.widget.CardView
+        android:layout_below="@id/searchLayout"
+        android:id="@+id/filter_cardview"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="57dp"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal"
+            android:weightSum="4"
+           >
+            <Button
+                android:id="@+id/homeFragment_asc_button"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:drawableStart="@drawable/ic_group"
+                android:text="Sırala"
+                android:drawablePadding="-80dp"
+                android:background="@color/white"
+                android:layout_weight="2"/>
+            <Button
+                android:id="@+id/homeFragmnet_filter_butoon"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:drawableStart="@drawable/ic_funnel"
+                android:drawablePadding="-80dp"
+                android:background="@color/white"
+                android:text="Filtre"
+                android:layout_weight="2"/>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/product_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/filter_cardview"
+
+        />
 
     <ProgressBar
         android:id="@+id/ürünYükleniyor"
         style="?android:attr/progressBarStyle"
         android:layout_gravity="center"
+        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -23,6 +87,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_centerInParent="true"
         android:textSize="18sp"
         android:text="Sayfa Yüklenemedi"/>
-</FrameLayout>
+</RelativeLayout>
