--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="blue">#2D9CDB</color>
     <color name="black">#000000</color>
+    <color name="white">#fff</color>
+    <color name="yellow">#FDBF00</color>
 
 
 </resources>
