--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_margin="10dp"
+    android:background="@color/white"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <ImageView
         android:id="@+id/recyclerview_image_product"
@@ -28,6 +29,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginStart="5dp"
         android:textColor="@color/blue"
+        android:textStyle="bold"
         android:text="879,99 TL"/>
 
 </LinearLayout>
