--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,73 +4,79 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.HomeFragment"
+    android:elevation="10dp"
     android:layout_marginBottom="50dp">
     <LinearLayout
         android:id="@+id/searchLayout"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:weightSum="4"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:orientation="horizontal">
-        <EditText
-            android:id="@+id/homeFragment_searct_Edittext"
-            android:layout_width="0dp"
-            android:layout_weight="3"
+        <SearchView
+            android:id="@+id/searcview"
+            android:layout_width="match_parent"
             android:layout_height="55dp"
-            android:layout_margin="20dp"/>
-        <TextView
-            android:id="@+id/searchButton"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:padding="10dp"
-            android:drawableLeft="@drawable/ic_baseline_search_24"
-            android:layout_weight="1"/>
-
+            android:queryHint="Kategori veya ürün ara"
+            />
     </LinearLayout>
 
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_below="@id/searchLayout"
-        android:id="@+id/filter_cardview"
+        android:id="@+id/filterLayout"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_height="57dp"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal"
+        android:weightSum="4"
         >
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="57dp"
-            android:orientation="horizontal"
-            android:gravity="center_horizontal"
-            android:weightSum="4"
-           >
-            <Button
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/filter_background"
+            android:gravity="center"
+            android:layout_weight="2">
+            <TextView
                 android:id="@+id/homeFragment_asc_button"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:drawableStart="@drawable/ic_group"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawablePadding="15dp"
                 android:text="Sırala"
-                android:drawablePadding="-80dp"
-                android:background="@color/white"
-                android:layout_weight="2"/>
-            <Button
-                android:id="@+id/homeFragmnet_filter_butoon"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:drawableStart="@drawable/ic_funnel"
-                android:drawablePadding="-80dp"
-                android:background="@color/white"
-                android:text="Filtre"
-                android:layout_weight="2"/>
+                android:textColor="@color/black"
+                android:drawableStart="@drawable/ic_group"
+                />
 
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:background="@drawable/filter_background_1"
+            android:gravity="center">
+            <TextView
+                android:id="@+id/homeFragmnet_filter_butoon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_funnel"
+                android:background="@color/white"
+                android:textColor="@color/black"
+                android:drawablePadding="15dp"
+                android:text="Filtre"
+                />
+        </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/product_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="20dp"
-        android:layout_below="@id/filter_cardview"
+        android:layout_below="@id/filterLayout"
 
         />
 
