--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="black">#000000</color>
     <color name="white">#fff</color>
     <color name="yellow">#FDBF00</color>
+    <color name="brown">#52565C</color>
 
 
 </resources>
