--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -71,12 +71,25 @@
         </LinearLayout>
 
     </LinearLayout>
+    <Button
+        android:id="@+id/homeFragment_deleteFilter_button"
+        android:layout_width="wrap_content"
+        android:layout_alignStart="@id/filterLayout"
+        android:layout_marginTop="5dp"
+        android:padding="5dp"
+        android:drawablePadding="5dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/filterLayout"
+        android:drawableEnd="@drawable/ic_baseline_delete_forever_24"
+        android:background="@drawable/deletefilterbutton_background"
+        android:visibility="gone"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/product_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
-        android:layout_below="@id/filterLayout"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/homeFragment_deleteFilter_button"
 
         />
 
