--- a/app/src/main/res/navigation/bottomnav_navigation.xml
+++ b/app/src/main/res/navigation/bottomnav_navigation.xml
@@ -17,7 +17,7 @@
             android:name="selectedItem"
             app:argType="string"
             app:nullable="true"
-            android:defaultValue="null" />
+            android:defaultValue="" />
     </fragment>
     <fragment
         android:id="@+id/navigation_products"
