--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="white">#fff</color>
     <color name="yellow">#FDBF00</color>
     <color name="brown">#52565C</color>
+    <color name="brown_filter">#7E7E7E</color>
 
 
 </resources>
